--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <div id="app">
         {{nazwa}} jest gruba i wazy {{waga}}
 <div @click="waga++" style="color:blue;margin-top:100px;padding:10px;">ciezaruj</div>
-eh..   
+<button @click="changeTitle">czejndz title</button>
 </div>
+
     <script src="app.js"></script> 
 </body>
 </html>
