modified:   app.js 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         {{nazwa}} jest gruba i wazy {{waga}}
 <div @click="waga++" style="color:blue;margin-top:100px;padding:10px;">ciezaruj</div>
 <button @click="changeTitle">czejndz title</button>
+<div v-if="flaga">{{nazwa}}</div>
 </div>
 
     <script src="app.js"></script> 
