--- a/index.html
+++ b/index.html
@@ -4,17 +4,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+
+<style>
+       @import url('https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap');
+       body {
+        font-family:'Teko';
+        font-size:1.5em;
+    }
+    .box {
+        padding: 100px 0;
+        width: 400 px;
+        text-align: center;
+        background: #ddd;
+        margin: 20px;
+        display: inline-block;
+    }
+</style>
 </head>
 <body>
 
-    <h1>hi espania</h1>
+    <h1>TESTUJEMY</h1>
     <div id="app">
-        {{nazwa}} jest gruba i wazy {{waga}}
-<div @click="waga++" style="color:blue;margin-top:100px;padding:10px;">ciezaruj</div>
-<button @click="changeTitle">czejndz title</button>
-<div v-if="flaga">{{nazwa}}</div>
-</div>
-
+        <div v-show="flaga">
+            {{nazwa}} ma wyporność {{wypornosc}}
+        </div>
+        <br>
+        <button @click="przestawFlage">TOGGLE SHOW</button>
+        <br>
+        <div class="box" @mouseover="handleEvent">mouseover (enter)</div>
+        <div class="box">mouseleave</div>
+        <div class="box">double click</div>
+        <div class="box"></div>
+    </div>
     <script src="app.js"></script> 
 </body>
 </html>
