--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <br>
         <button @click="przestawFlage">TOGGLE SHOW</button>
         <br>
-        <div class="box" @mouseover="handleEvent">mouseover (enter)</div>
-        <div class="box">mouseleave</div>
-        <div class="box">double click</div>
-        <div class="box"></div>
+        <div class="box" @mouseover="handleEvent($event,s)">mouseover (enter)</div>
+        <div class="box" @mouseleave="handleEvent">mouseleave</div>
+        <div class="box" @dblclick="handleEvent">double click</div>
+        <div class="box" @mousemove="handleMouseMove"></div>
     </div>
     <script src="app.js"></script> 
 </body>
