--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <button @click="przestawFlage">TOGGLE SHOW</button>
         <br>
         <div class="box" @mouseover="handleEvent">mouseover (enter)</div>
-        <div class="box">mouseleave</div>
-        <div class="box">double click</div>
-        <div class="box"></div>
+        <div class="box" @mouseleave="handleEvent">mouseleave</div>
+        <div class="box" @dblclick="handleEvent">double click</div>
+        <div class="box" @mousemove="handleMouseMove"> position: {{x}} : {{y}}</div>
     </div>
     <script src="app.js"></script> 
 </body>
