--- a/index.html
+++ b/index.html
@@ -26,15 +26,14 @@
     <h1>TESTUJEMY</h1>
     <div id="app">
         <div v-show="flaga">
-            {{nazwa}} ma wyporność {{wypornosc}}
+            <ul>
+                <li v-for="ship in ships">
+                    <span style="color:red">{{ship.nazwa}}</span> ma wyporność {{ship.wypornosc}} i prędziutkość {{ship.szybkosc}}
+                </li>
+            </ul>
         </div>
         <br>
         <button @click="przestawFlage">TOGGLE SHOW</button>
-        <br>
-        <div class="box" @mouseover="handleEvent">mouseover (enter)</div>
-        <div class="box" @mouseleave="handleEvent">mouseleave</div>
-        <div class="box" @dblclick="handleEvent">double click</div>
-        <div class="box" @mousemove="handleMouseMove"> position: {{x}} : {{y}}</div>
     </div>
     <script src="app.js"></script> 
 </body>
